Add general corrections

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt, a4paper, twoside]{article}
+%todo make font size 11pt and make graphs bigger.
 
 \usepackage{fontspec}
 \usepackage{blindtext}
@@ -12,7 +13,7 @@
 \usepackage{multicol}
 \usepackage{amsmath}
 \usepackage{subcaption}
-\usepackage[hang, flushmargin, multiple]{footmisc} % remove indent in footnote. % fixme maybe this
+\usepackage[hang, flushmargin, multiple, bottom]{footmisc}
 \usepackage{float}
 \usepackage{array}
 \usepackage{booktabs}
@@ -20,7 +21,7 @@
 
 \raggedbottom
 
-% FIXME swap to calibri on windows? no license for linux
+% todo we need to not use this
 \setmainfont{Carlito}
 \titlespacing*{\section}{0px}{3mm}{1mm}
 \titlespacing*{\subsection}{0px}{3mm}{1mm}
