--- a/docs/report/sections/01-sommario.tex
+++ b/docs/report/sections/01-sommario.tex
@@ -1,11 +1,11 @@
 In questo esperimento abbiamo analizzato il comportamento di un fascio laser polarizzato
 che colpisce la superficie di un prisma di vetro.
 In particolare, abbiamo verificato che l’intensità del fascio laser riflesso segua l’andamento
-previsto dalle equazioni di Fresnel e abbiamo misurato l'angolo di Brewster per il prisma.
+previsto dalle equazioni di Fresnel e abbiamo misurato l'angolo di Brewster per il materiale del prisma.
 Per la prima parte dell'esperimento, abbiamo svolto un \emph{fit} sui dati d'intensità luminosa raccolti; i valori di chi-quadro ridotto
 ottenuti sono di $\tilde \chi^2_\pi = 0.71$ per la luce \pi-polarizzata e
 $\tilde \chi^2_\sigma = 1.17$ per la luce \sigma-polarizzata, a cui corrispondono le probabilità $P(\tilde \chi^2 < \tilde \chi^2_\pi) = 0.10$ e $P(\tilde \chi^2 < \tilde \chi^2_\sigma) = 0.82$.
-Per la seconda parte, abbiamo usato due metodi diversi per trovare l'angolo di Brewster.
+Per la seconda parte abbiamo usato due metodi diversi per trovare l'angolo di Brewster.
 I risultati ottenuti $\theta_{B1} = 56.2^\circ \pm 0.1^\circ$ e $\theta_{B2} = 56.0^\circ \pm 0.2^\circ$ sono in parziale disaccordo tra di loro,
-ma sono completamente compatibili con l'intervallo di valori atteso.
+ma sono compatibili con l'intervallo di valori atteso.
 \endinput
