--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -1,7 +1,7 @@
 Quando un raggio luminoso colpisce una superficie di separazione tra due
-dielettrici con indici di rifrazione $n_1$ e $n_2$ diversi, si possono verificare
+dielettrici con indici di rifrazione diversi, si possono verificare
 i fenomeni della riflessione e rifrazione.
-Le equazioni di Fresnel, derivabili direttamente dalle equazioni di Maxwell, % fixme in equazioni ci va maiuscola?
+Le equazioni di Fresnel, derivabili direttamente dalle equazioni di Maxwell,
 descrivono un aspetto di questo comportamento, prevedendo quale frazione d'intensità
 luminosa viene riflessa e quale rifratta. Se indichiamo con $R_\pi$ e $R_\sigma$ le
 frazioni d'intensità luminosa riflessa polarizzate, rispettivamente, parallelamente
@@ -11,7 +11,7 @@ e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
   R_\pi = \frac {
     n_2 \cos{\theta_i} - n_1 \cos{\theta_t}
   } {
-    n_2” \cos{\theta_i} + n_1 \cos{\theta_t}
+    n_2 \cos{\theta_i} + n_1 \cos{\theta_t}
   }\label{eq:fresnel-eq-p}
 \end{equation}
 
@@ -19,20 +19,19 @@ e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
   R_\sigma = \frac {
     n_1 \cos{\theta_i} - n_2 \cos{\theta_t}
   } {
-    n_1” \cos{\theta_i} + n_2 \cos{\theta_t}
+    n_1 \cos{\theta_i} + n_2 \cos{\theta_t}
   }\label{eq:fresnel-eq-s}
 \end{equation}
 %
 \noindent dove $n_1$ e $n_2$ sono gli indici di rifrazione dei due mezzi, $\theta_i$ e
-$\theta_t$ sono gli angoli d'incidenza e rifrazione\footnote{La $t$ in $\theta_t$ sta per "trasmesso". Convenzionalmente, con
-$\theta_r$ si indica l'angolo di riflessione.} del raggio luminoso.
+$\theta_t$ sono gli angoli d'incidenza e rifrazione\footnote{La $t$ in $\theta_t$ sta per "trasmesso", come da convenzione.} del raggio luminoso.
 Una dimostrazione rigorosa di come si ricavino le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} non è oggetto
 di questo testo;
 si veda Mazzoldi\cite{mazzoldi98} per ulteriori approfondimenti.
 
 Variando $\theta_i$ e misurando l’intensità del raggio riflesso,
-ci aspettiamo di osservare l'andamento previsto da \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} (a meno di una
-costante moltiplicativa).
+ci aspettiamo di osservare l'andamento previsto da \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s}, a meno di una
+costante moltiplicativa.
 Il valore di $\theta_t$ viene ricavato dalla legge di Snell per la rifrazione:
 %
 \begin{equation}
