--- a/docs/report/sections/05-conclusioni.tex
+++ b/docs/report/sections/05-conclusioni.tex
@@ -3,17 +3,16 @@ previsto. Il \emph{fit} ottenuto è soddisfacente, e
 il valore ottenuto per $n_2$ è compatibile con il coefficiente di rifrazione del
 vetro $n = 1.5$.
 È possibile che ci sia stata una sovrastima delle incertezze, visto il valore di
-$\tilde \chi^2_\pi < 1$, ma questa ipotesi è difficile da confermare con il numero
+$\tilde \chi^2_\pi < 1$, ma questa ipotesi è difficile da confermare dato il numero
 limitato di dati raccolti.
 Riguardo alla seconda parte dell'esperimento, abbiamo ottenuto due stime di
-$\theta_B$ in parziale disaccordo: $\theta_B = 56.2^\circ \pm 0.1^\circ$ e $\theta_B 56.8^\circ \pm 0.2^\circ$.
+$\theta_B$ in parziale disaccordo: $\theta_B = 56.2^\circ \pm 0.1^\circ$ e $\theta_B = 56.8^\circ \pm 0.2^\circ$.
 Tuttavia, l'indice di rifrazione tipico del vetro è compreso tra $n=1.50$ e $n=1.53$, e se
-inseriamo questi valori nell'equazione \eqref{legge-brewster} osserviamo che i risultati
-ottenuti rientrano nell'intervallo di valori attesi $56.3 < \theta_{B} < 56.8^\circ$.
+inseriamo questi valori nell'equazione \eqref{eq:legge-brewster} osserviamo che i risultati
+ottenuti rientrano nell'intervallo di valori attesi $56.3^\circ < \theta_{B} < 56.8^\circ$.
 
 Nello svolgere l'esperimento siamo stati fortemente limitati dal tempo a disposizione
 e siamo confidenti che il nostro apparato sperimentale possa ottenere risultati ancora
 più accurati se potessimo acquisire ulteriori set di dati. In ogni caso, consideriamo
 questo esperimento un successo.
 \endinput
-
