--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -1,15 +1,14 @@
 \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
   L’apparato sperimentale è riportato in Fig.\ref{fig:apparato-strumentale}.
-  Un prisma(5) di vetro, con indice di rifrazione $n_2$ sconosciuto, è posizionato al centro di una guida circolare graduata(4),
-  montato ad un servomotore \emph{SM-S2309S}\footnote{http://descargas.cetronic.es/microservo.pdf}.
+  Un prisma(5) di vetro di indice di rifrazione $n_2$ sconosciuto, montato su un servomotore \emph{SM-S2309S}\footnote{http://descargas.cetronic.es/microservo.pdf}, è posizionato al centro di una guida circolare graduata(4).
   Un laser(1) a luce rossa e due filtri polaroid(2, 3) sono
   allineati con il prisma. Un sensore di intensità luminosa(6) \emph{TEMT6000}\footnote{https://www.sparkfun.com/datasheets/Sensors/Imaging/TEMT6000.pdf},
   collegato ad un microcontrollore(7) \emph{Arduino Uno (ATmega328)}\footnote{http://store.arduino.cc/products/arduino-uno-rev3}%
-  \footnote{Da qui in avanti, si userà il nome abbreviato \emph{Arduino} per riferirsi al microcontrollore.}
+  \footnote{Da qui in avanti, si userà il nome abbreviato \emph{Arduino} al posto di \emph{Arduino Uno} per riferirsi al microcontrollore.},
   è libero di ruotare lungo la guida.
   Il circuito che collega \emph{Arduino} e sensore è schematizzato in Fig.\ref{fig:diagramma-circuito}.
   %
-  Il servomotore permette di ruotare il prisma con una risoluzione angolare di 1.0° +/- 0.5°.
+  Il servomotore permette di ruotare il prisma con una risoluzione angolare di ${1.0^\circ \pm 0.5^\circ}$.
   L'apparato Arduino-sensore fornisce una misura dell'intensità luminosa
   sulla superficie del sensore nell'intervallo $I = [0, 1000]$ unità arbitrarie,
   con un'incertezza sistematica massima di $0.8\%$ (si rimanda a Sez.\ref{subsec:calcolo-incertezza-strumentale}
@@ -50,7 +49,7 @@
   a $R_\sigma$. Questa procedura è stato adattata da quanto descritto in Lipson\cite{lipson20}.
   \begin{enumerate}
     \item%
-      Abbiamo iniziato posizionando il polaroid(3) in modo che la polarizzazione del
+      Abbiamo posizionato il polaroid(3) in modo che la polarizzazione del
       fascio laser fosse parallela al lato del prisma, e abbiamo aggiustato l'angolo
       del laser rispetto ad esso, in modo da evitare che il fascio
       polarizzato uscente dal laser venisse bloccato.
@@ -60,29 +59,29 @@
       tutto il fascio laser fosse contenuto sulla superficie del prisma(5)\footnote{Per $\theta_i \to 90^\circ$, la
       proiezione del fascio laser sul prisma è un ellisse di semiasse maggiore $a \to +\infty$. Chiaramente, non appena
       $a$ supera la lunghezza del lato del prisma, le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} perdono
-      la loro validità.}
+      la loro validità.}.
     \item%
       Ruotando il polaroid(2), abbiamo ridotto l’intensità del fascio laser
-      incidente al prisma, fino a che Arduino non ha potuto rilevare una
+      incidente sul prisma, fino a che Arduino non ha potuto rilevare una
       variazione significativa del segnale del sensore.
       Questo ci ha permesso di sfruttare l'intero range di operatività del convertitore analogico-digitale di Arduino.
     \item%
-      Abbiamo raccolto l'intensità luminosa rilevata dal sensore in questo punto,
+      Abbiamo acquisito l'intensità luminosa rilevata dal sensore in questo punto,
       poi abbiamo ruotato il prisma in senso orario e abbiamo
       allineato il sensore di conseguenza.
     \item%
       Abbiamo ripetuto il passo precedente fino a raggiungere un valore di $\theta_i$
-      il più possibile vicino a zero
+      il più possibile vicino a zero.
     \item%
-      abbiamo ruotato di $90^\circ$ il polaroid(3) e ripetuto l'intera
+      Abbiamo ruotato di $90^\circ$ il polaroid(3) e ripetuto l'intera
       procedura un'altra volta.
   \end{enumerate}
   %
   I dati che abbiamo raccolto in questo modo non \emph{non} sono
   i coefficienti $R_\pi$ e $R_\sigma$, ma differiscono da essi per una costante
-  moltiplicativa, che verrà determinata tramite un \emph{fit}\footnote{Avremmo potuto misurare
-  questo valore direttamente, ma in questo caso avremmo dovuto
-  abbassare ulteriormente l'intensità del fascio laser, diminuendo la precisione dei
-  dati raccolti.}, come descritto in Sez.$\ref{subsec:analisi-coefficienti}$. %todo missing ref
+  moltiplicativa; questa verrà determinata tramite un \emph{fit}\footnote{Avremmo potuto misurare
+  questo valore direttamente, ma così facendo avremmo dovuto
+  abbassare ulteriormente l'intensità del fascio laser e non avremmo più potuto
+  sfruttare l'intero intervallo di operatività di Arduino.}, come descritto in Sez.$\ref{subsec:analisi-coefficienti}$.
 \endinput
 
