--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -21,8 +21,7 @@
 
 \raggedbottom
 
-% todo we need to not use this
-\setmainfont{Carlito}
+%\setmainfont{Carlito}
 \titlespacing*{\section}{0px}{3mm}{1mm}
 \titlespacing*{\subsection}{0px}{3mm}{1mm}
 \geometry{
@@ -44,7 +43,7 @@
 
 
 \begin{center}
-  \huge Misura dell'angolo di Brewster di un prisma mediante le formule di Fresnel \\ %todo this is just a placeholder title for now
+  \huge Misura dell'angolo di Brewster di un prisma mediante le formule di Fresnel \\
   \large Francesco Platini \getenv{MAT1}. Matteo Bonacini \getenv{MAT2}.\\ % see readme on how to use this
   \today
 \end{center}
