--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -71,13 +71,14 @@
   l'andamento previsto.
   Le incertezze associate ad ogni punto sono state ottenute come somma di:
   (incertezze sistematiche dovute all'attrezzatura) $+$ (incertezze casuali), calcolate come
-  descritto in Sez.\ref{subsec:calcolo-incertezza-strumentale} e Sez.\ref{subsec:calcolo-incertezza-casuale}.
+  descritto in Sez.\ref{subsec:calcolo-incertezza-strumentale} e Sez.\ref{subsec:calcolo-incertezza-casuale}. L'incertezza di $\pm 0.5^\circ$ del servomotore
+  è da considerarsi già inclusa nelle incertezze sistematiche.
   Normalizzando i dati (dividendo i valori misurati per il parametro $I_0$ del \emph{fit}), si ottengono i risultati mostrati in Fig.\ref{fig:normalised-coefficients}
   % per normalizzare basta dividere per I_0, o conviene imporre anche che i due n2 siano uguali?
   % ceh in realtà ci sta prenderne la media per soddisfare a condizione descritta in Lipson.
   % noi non l'abbiamo fatto.
   assieme all'andamento previsto\footnote{Calcolato supponendo di avere un valore di $1.50 \leq n_2 \leq 1.53$,
-  caratteristico per il vetro K9 alla lunghezza della luce rossa.}. % fixme dovremmo specificare che abbiamo anche aggiunto un range I_0 del 10%?
+  caratteristico per il vetro K9 alla lunghezza della luce rossa.}. % abbiamo anche aggiunto un range I_0 del 10%. è per far venire meglio il grafico.
   %
   \begin{figure}[H]
     \centering
