--- a/docs/report/sections/06-appendice.tex
+++ b/docs/report/sections/06-appendice.tex
@@ -69,7 +69,7 @@
   % Questa incertezza è data dall'allineamento del sensore.
   A causa di limitazioni strumentali, non ci è stato possibile ottenere un campione
   numeroso di misure per ogni angolo. Possiamo ottenere ugualmente
-  una stima delle incertezze casuali assumendo che: % fixme scrivi che non abbiamo cosniderato l'errore del servo da qualche parte
+  una stima delle incertezze casuali assumendo che:
   1) le misure di intensità sono distribuite in modo normale attorno a un valore
     medio $\mu_i$, proprio di ogni angolo;
   2) tra un angolo e un altro la distribuzione differisce solo per la media e non per la
