--- a/docs/report/sections/06-appendice.tex
+++ b/docs/report/sections/06-appendice.tex
@@ -35,7 +35,7 @@
   \end{multicols}
   %
   \noindent Dividendo la \eqref{eq:vsig-misura} per la \eqref{eq:vref-misura} troviamo il valore vero cercato $V_{sig}$.
-  La formula finale è quindi (riportata con gli errori già calcolati):
+  La formula finale è quindi (riportata con le incertezze già calcolate):
   %
   \begin{equation}
     V_{sig} = \frac {
@@ -60,7 +60,7 @@
   Questo valore tiene conto di tutte le possibili fonti di errore interne
   all’\emph{ADC} ed è da considerarsi come limite superiore.
   Per quanto riguarda l'incertezza del potenziale di riferimento, abbiamo
-  utilizzato il lavoro di Main\cite{main}, dove è stato misurato un errore
+  utilizzato il lavoro di Main\cite{main}, dove è stato misurato un errore sistematico
   massimo dello $0.4\%$.
   Propagando linearmente le incertezze nella formula \eqref{eq:misura-intensità} si ottiene un incertezza
   strumentale dello $0.8\%$.
