--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -42,11 +42,11 @@ Il valore di $\theta_t$ viene ricavato dalla legge di Snell per la rifrazione:
 \noindent Le formule prevedono che $R_\pi$ si annulli per un certo valore di $\theta_i$,
 che indicheremo con $\theta_B$.
 Questo angolo prende il nome di Angolo di Brewster. Imponendo che si annulli il
-denominatore nell'equazione \eqref{eq:fresnel-eq-p}, si ricava la legge di Brewster:
+numeratore nell'equazione \eqref{eq:fresnel-eq-p}, si ricava la legge di Brewster:
 %
 \begin{equation}
   \theta_B = \arctan{
-    \frac {n_2} {n_1}as
+    \frac {n_2} {n_1}
   }\label{eq:legge-brewster}
 \end{equation}
 %
