--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -119,7 +119,7 @@
   Possiamo ottenere un'altra stima per $\theta_B$ con un \emph{fit} parabolico nella stretta regione
   dove $R_\pi$ si annulla e prendere l'ascissa del vertice della parabola come miglior stima per $\theta_B$.
   La funzione utilizzata per il \emph{fit} è quella di una parabola traslata: $y = a(x - x_0)^2$.
-  Il risultato ottenuto è mostrato in figura \ref{fig:brewsters-angle}. I valori numerici
+  Il risultato ottenuto è mostrato in Fig.\ref{fig:brewsters-angle}. I valori numerici
   dei parametri risultanti dal fit sono riportati in Tab.\ref{tab:fit-brewster}
   %
   \begin{figure}[h]
