--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -24,13 +24,13 @@ e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
 \end{equation}
 %
 \noindent dove $n_1$ e $n_2$ sono gli indici di rifrazione dei due mezzi, $\theta_i$ e
-$\theta_t$ sono gli angoli d'incidenza e rifrazione\footnote{La $t$ in $\theta_t$ sta per "trasmesso", come da convenzione.} del raggio luminoso.
+$\theta_t$ sono gli angoli d'incidenza e rifrazione\footnote{La $t$ in $\theta_t$ sta per "angolo trasmesso", come da convenzione.} del raggio luminoso.
 Una dimostrazione rigorosa di come si ricavino le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} non è oggetto
 di questo testo;
 si veda Mazzoldi\cite{mazzoldi98} per ulteriori approfondimenti.
 
 Variando $\theta_i$ e misurando l’intensità del raggio riflesso,
-ci aspettiamo di osservare l'andamento previsto da \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s}, a meno di una
+ci aspettiamo di osservare l'andamento previsto dalle equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s}, a meno di una
 costante moltiplicativa.
 Il valore di $\theta_t$ viene ricavato dalla legge di Snell per la rifrazione:
 %
