--- a/docs/report/sections/05-conclusioni.tex
+++ b/docs/report/sections/05-conclusioni.tex
@@ -2,9 +2,9 @@ Per quanto riguarda la prima parte dell'esperimento, i dati raccolti seguono l'a
 previsto. Il \emph{fit} ottenuto è soddisfacente, e
 il valore ottenuto per $n_2$ è compatibile con il coefficiente di rifrazione del
 vetro $n = 1.5$.
-È possibile che ci sia stata una sovrastima delle incertezze, visto il valore di
-$\tilde \chi^2_\pi < 1$, ma questa ipotesi è difficile da confermare dato il numero
-limitato di dati raccolti.
+Il valore di chi-quadro
+$\tilde \chi^2_\pi < 1$ indica che c'è stata una sovrastima delle incertezze, che può
+essere dovuta al numero ridotto di misture effettuate.
 Riguardo alla seconda parte dell'esperimento, abbiamo ottenuto due stime di
 $\theta_B$ in parziale disaccordo: $\theta_B = 56.2^\circ \pm 0.1^\circ$ e $\theta_B = 56.8^\circ \pm 0.2^\circ$.
 Tuttavia, l'indice di rifrazione tipico del vetro è compreso tra $n=1.50$ e $n=1.53$, e se
