--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper, twoside]{article}
+\documentclass[11pt, a4paper, twoside]{article}
 
 \usepackage{fontspec}
 \usepackage{blindtext}
@@ -6,9 +6,21 @@
 \usepackage{setspace}
 \usepackage{titlesec}
 \usepackage{indentfirst}
+\usepackage{graphicx}
+\usepackage[italian]{babel}
+\usepackage{catchfile} % used in \getenv command
+\usepackage{multicol}
+\usepackage{amsmath}
+\usepackage{subcaption}
+\usepackage[hang, flushmargin, multiple, bottom]{footmisc}
+\usepackage{float}
+\usepackage{array}
+\usepackage{booktabs}
+\usepackage{url}
 
-% FIXME swap to calibri on windows? no license for linux
-\setmainfont{Carlito}
+\raggedbottom
+
+%\setmainfont{Carlito}
 \titlespacing*{\section}{0px}{3mm}{1mm}
 \titlespacing*{\subsection}{0px}{3mm}{1mm}
 \geometry{
@@ -18,44 +30,52 @@
   bottom=2cm
 }
 \setlength{\parindent}{10mm}
+\graphicspath{ {./assets}, {../../assets} }
+
+% Allow use of command \getenv{VARNAME}.
+% Taken from: https://tex.stackexchange.com/questions/62010/can-i-access-system-environment-variables-from-latex-for-instance-home
+\newcommand{\getenv}[2][]{
+  \CatchFileEdef{\temp}{"|kpsewhich --var-value #2"}{\endlinechar=-1}%
+  \if\relax\detokenize{#1}\relax\temp\else\let#1\temp\fi}
+
+% Roman numerals
+\newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
 \begin{document}
 
+
 \begin{center}
-  \huge Titolo \\
-  \large Francesco Platini mat. Matteo Bonacini mat.\\
-  Data
+  \huge Misura dell'angolo di Brewster di un prisma mediante le formule di Fresnel \\
+  \large Francesco Platini \getenv{MAT1}. Matteo Bonacini \getenv{MAT2}.\\ % see readme on how to use this
+  \today
 \end{center}
 
-% Title spacing
-
-\section{Abstract}\label{sec:abstract}
-  \blindtext[1]
+\begin{abstract}\label{sec:abstract}
+\input{./docs/report/sections/01-sommario.tex}
+\end{abstract}
 
 \section{Introduzione}\label{sec:introduzione}
-  \blindtext[2]
+\input{./docs/report/sections/02-introduzione}
 
 \section{Apparato sperimentale e svolgimento}\label{sec:apparato-sperimentale-e-svolgimento}
-  \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
-    \blindtext[1]
-  \subsection{Svolgimento}\label{subsec:svolgimento}
-    \blindtext[1]
+\input{./docs/report/sections/03-apparato-e-svolgimento.tex}
 
 \section{Risultati e discussione}\label{sec:risultati-e-discussione}
-  \blindtext[2]
+\input{./docs/report/sections/04-risultati.tex}
 
 \section{Conclusioni}\label{sec:conclusioni}
-  \blindtext[1]
+\input{./docs/report/sections/05-conclusioni.tex}
 
-\newpage
-\section{Appendice}
-  \subsection{Calcolo errore 1}
-    \blindtext[1]
-  \subsection{Calcolo errore 2}
-    \blindtext[1]
+\section{Appendice}\label{sec:appendice}
+\input{./docs/report/sections/06-appendice.tex}
+
+\bibliographystyle{unsrt} % We choose the "plain" reference style
+\bibliography{./docs/report/fresnelReportRefs.bib} % Entries are in the fresnelReportRefs.bib file
+
 
 \end{document}
 
 %In this document somasdmeters
 %were added. There is an encoding package,
 %and pagesize and fontsize parameters.
+
