--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -47,7 +47,7 @@
 \subsection{Procedura sperimentale}\label{subsec:procedura-sperimentale}
   Abbiamo seguito la procedura sperimentale riportata di seguito, ripetuta due
   volte: una per raccogliere i dati relativi a $R_\pi$ e una per i dati relativi
-  a $R_\sigma$. Questa procedura è stato adattata da quanto descritto in Lipson\cite{lipson20}.
+  a $R_\sigma$. Questa procedura è stata adattata da quanto descritto in Lipson\cite{lipson20}.
   \begin{enumerate}
     \item%
       Abbiamo posizionato il polaroid(\rom{3}) in modo che la polarizzazione del
