Fix typo in repor equations

--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -8,19 +8,26 @@ frazioni d'intensità luminosa riflessa polarizzate, rispettivamente, parallelam
 e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
 %
 \begin{equation}
-  R_\pi = \frac {
-    n_2 \cos{\theta_i} - n_1 \cos{\theta_t}
-  } {
-    n_2 \cos{\theta_i} + n_1 \cos{\theta_t}
-  }\label{eq:fresnel-eq-p}
+  R_\pi =
+  \left(
+    \frac {
+      n_2 \cos{\theta_i} - n_1 \cos{\theta_t}
+    } {
+      n_2 \cos{\theta_i} + n_1 \cos{\theta_t}
+    }\right)^2
+  \label{eq:fresnel-eq-p}
 \end{equation}
 
 \begin{equation}
-  R_\sigma = \frac {
-    n_1 \cos{\theta_i} - n_2 \cos{\theta_t}
-  } {
-    n_1 \cos{\theta_i} + n_2 \cos{\theta_t}
-  }\label{eq:fresnel-eq-s}
+  R_\sigma =
+  \left(
+    \frac {
+      n_1 \cos{\theta_i} - n_2 \cos{\theta_t}
+    } {
+      n_1 \cos{\theta_i} + n_2 \cos{\theta_t}
+    }
+  \right)^2
+  \label{eq:fresnel-eq-s}
 \end{equation}
 %
 \noindent dove $n_1$ e $n_2$ sono gli indici di rifrazione dei due mezzi, $\theta_i$ e
